feat: add get sales and subcatgory
